@@ -15,3 +15,4 @@ setuptools
 sortedcontainers
 unidecode
 pyric
+zeroconf
